优化图片的展示形式

--- a/app/src/main/res/layout/item_classify_content.xml
+++ b/app/src/main/res/layout/item_classify_content.xml
@@ -8,6 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/item_image"
         tools:src="@color/color_E31436"
         android:layout_width="@dimen/x114"
