--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"/>
 
         <ImageView
+            android:scaleType="centerCrop"
             android:layout_toRightOf="@+id/item_select"
             android:layout_marginRight="@dimen/x24"
             bind:srcRound="@{date.thumbnail}"
