按照要求修改图片

--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -30,6 +30,7 @@
             bind:listener="@{listener}"/>
 
         <ImageView
+            android:scaleType="centerCrop"
             android:layout_marginRight="@dimen/x24"
             bind:srcRound="@{date.thumbnail}"
             android:id="@+id/confirm_image"
