隐藏优惠券入口，完成添加备注功能，修改客工id的存储

--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -320,6 +320,7 @@
             android:layout_height="@dimen/y12"/>
 
         <RelativeLayout
+            android:visibility="gone"
             android:layout_marginTop="@dimen/y12"
             android:layout_below="@+id/confirm_remarkContainer"
             android:onClick="@{listener.onClick}"
