--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -40,11 +40,91 @@
             android:textColor="@color/color_DE050505"
             android:textSize="15sp"/>
 
+        <RelativeLayout
+            android:layout_below="@+id/in_clude"
+            android:id="@+id/sreach_head"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y60"
+            android:layout_marginBottom="@dimen/y20"
+            android:layout_marginLeft="@dimen/x28"
+            android:layout_marginRight="@dimen/x28"
+            android:layout_marginTop="@dimen/y20">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/x24"
+                android:layout_toLeftOf="@+id/sreach_sreach"
+                android:background="@drawable/bg_sreach"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:id="@+id/sreach_nav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/x26"
+                    android:background="@mipmap/nav_search"/>
+
+
+                <EditText
+                    android:id="@+id/sreach_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/x10"
+                    android:layout_toLeftOf="@id/sreach_close"
+                    android:layout_toRightOf="@id/sreach_nav"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:hint="搜索会员"
+                    android:imeOptions="actionDone"
+                    android:paddingRight="@dimen/x26"
+                    android:singleLine="true"
+                    android:textColor="@color/color_DE050505"
+                    android:textColorHint="@color/color_ACACAC"
+                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textSize="13sp"/>
+
+
+                <ImageView
+                    android:id="@+id/sreach_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/x26"
+                    android:background="@mipmap/search_close"
+                    android:onClick="@{listener.onClick}"
+                    android:visibility="gone"/>
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/sreach_sreach"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:onClick="@{listener.onClick}"
+                android:text="搜索"
+                android:textColor="@color/color_DE050505"/>
+
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/sreach_line"
+            android:layout_below="@+id/sreach_head"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y2"
+            android:background="@color/color_F5F5F5"/>
+
         <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
             android:id="@+id/swipeToLoad"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/in_clude">
+            android:layout_below="@+id/sreach_line">
 
             <com.guestworker.view.swipeToLoadLayout.CustomRefreshHeadView
                 android:id="@+id/swipe_refresh_header"
